# sedimentation-assembler

./: .gitignore  CMakeLists.txt  Makefile  TODO  coff.cpp  coff.hpp  defines.hpp  elf.cpp  elf.hpp  error.hpp  main.cpp  main.hpp  thing.py  translate.cpp  translate.hpp  utility.cpp  utility.hpp  vex.cpp  vex.hpp
.github/workflows/: c-cpp.yml
html/: thing.ipynb
src/: coff.cpp  coff.hpp  defines.hpp  elf.cpp  elf.hpp  main.cpp  main.hpp  translate.cpp  translate.hpp  utility.cpp  utility.hpp  vex.cpp  vex.hpp
test/: testavx.asm  testavx.out  testc.asm  testfile.asm  testfile.out  testsse.asm  testsse.out
